2009-03-16 Bruce Cowan <bcowan@fastmail.co.uk>

    * src/menubar.c:
    * src/tle-update.c:
    Port TLE download to GIO.

    * configure.ac:
    * README:
    Remove references to libcurl, add GIO dependency, and bump GLib
    requirement.
    
    * src/about.c:
    Updated credits.
    
    * NEWS:
    Updated.

2009-03-01; Alexandru Csete <oz9aec@gmail.com>

    * configure.ac:
    Changed required GooCanvas version from 0.10 to 0.9 to be vompatible
    with older linux distributions, too (e.g. Ubuntu 8.04).
    

2009-02-19; Stephane Fillod <fillods@users.sf.net>

    * po/POTFILES.in:
    Remove goocanv8 files. Update list of C files.
    
    * po/fr.po:
    * configure.ac:
    New file, french l10n
    
    * src/Makefile.am:
    Fixed a typo.

2008-12-28; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig-editor.c:
    Added widgets for editing radio type and ptt.
    
    * src/sat-pref-rig-data.h:
    Updated column definitions to include rig type and ptt.
    
    * src/sat-pref-rig.c:
    Include rig type and ptt fields.
    
    * src/gtk-polar-view.c:
    * src/gtk-sat-map.c:
    * src/gtk-sky-at-glance.c:
    * src/gtk-polar-plot.c:
    * src/gtk-azel-plot.c:
    Update canvas bounds when resizing the canvas.
    

2008-12-27; Alexandru Csete <oz9aec@gmail.com>

    * autogen.sh:
    * configure.ac:
    * Makefile.am:
    * src/Makefile.am:
    Use sytem wide GooCanvas library instead of built-in copy. Build now
    requires GooCanvas 0.10 to be installed.
    
    * goocan8:
    Deleted.
    
    * src/radio-conf.[ch]:
    Added management of radio type.


2008-10-26; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-sat-list-popup.[ch]:
    New files containing popup menu for satlist. Satlist was previously
    using the generic sat-popup-menu, but that has been abandoned due to lack
    of support for simulated real time.
    
    * src/gtk-sat-list.c:
    Use new gtk-sat-list-popup.
    
    * src/sat-info.[ch]: