@@ -52,7 +52,6 @@ typedef enum {
 	SAT_CFG_BOOL_POL_SHOW_CURS_TRACK, /*!< Track mouse cursor on polar plot. */
   	SAT_CFG_BOOL_POL_SHOW_EXTRA_AZ_TICKS, /*!< Extra Az ticks at every 30 deg. */
 	SAT_CFG_BOOL_TLE_SERVER_AUTH,     /*!< TLE server requires authentication. */
-	SAT_CFG_BOOL_TLE_PROXY_AUTH,      /*!< Proxy requires authentication. */
     SAT_CFG_BOOL_TLE_ADD_NEW,         /*!< Add new satellites to database. */
     SAT_CFG_BOOL_KEEP_LOG_FILES,      /*!< Whether to keep old log files */
     SAT_CFG_BOOL_PRED_USE_REAL_T0,    /*!< Whether to use current time as T0 fro predictions */
@@ -139,7 +138,6 @@ typedef enum {
 	SAT_CFG_STR_POL_FONT,       /*!< Polar view font. */
 	SAT_CFG_STR_TLE_SERVER,     /*!< Server for TLE updates. */
 	SAT_CFG_STR_TLE_FILES,      /*!< ; separated list of files on server. */
-	SAT_CFG_STR_TLE_PROXY,      /*!< Proxy server. */
 	SAT_CFG_STR_TLE_FILE_DIR,   /*!< Local directory from which tle were last updated. */
 	SAT_CFG_STR_TLE_FILE_EXT,   /*!< File extensions. */
 	SAT_CFG_STR_PRED_SAVE_DIR,  /*!< Last used save directory for pass predictions */
